autofocus... is this bad?

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <body>
     <form id="post" action="/" method="post" autocomplete="off">
       <label for="message">What’s up?</label>
-      <input type="text" id="message" name="message" value="">
+      <input type="text" id="message" name="message" value="" autofocus>
       <button type="submit">Post</button>
     </form>
     <ul id="messages" class="messages">
